--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <th>Use</th>
       <th>Name</th>
       <th>Price</th>
       <th>Vendor</th>
